<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_weight="0.2"
        android:layout_margin="20dp"
        android:contentDescription="@string/contact"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/airweb_title"
        android:layout_weight="0.2"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:theme="@style/Theme.AirwebNews"
        android:layout_marginVertical="20dp"

        />

    <TextView
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/address_title"
        android:layout_weight="0.2"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:theme="@style/Theme.AirwebNews"
        />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/address"
        android:layout_weight="0.2"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:theme="@style/Theme.AirwebNews"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/mail_title"
        android:layout_weight="0.2"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:theme="@style/Theme.AirwebNews"
        />

    <TextView
        android:id="@+id/mailTextView"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/mail"
        android:layout_weight="0.2"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:theme="@style/Theme.AirwebNews"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/phone_title"
        android:layout_weight="0.2"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:theme="@style/Theme.AirwebNews"
        />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/phone"
        android:layout_weight="0.2"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:theme="@style/Theme.AirwebNews"
        android:layout_marginBottom="20dp"
        />





</LinearLayout>